--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>AN!Provision</title>
-	<META HTTP-EQUIV="Refresh" CONTENT="0; URL=cgi-bin/an-cwm">
+	<title>AN!CusterDashboard</title>
+	<META HTTP-EQUIV="Refresh" CONTENT="0; URL=cgi-bin/an-cdb">
 </head>
 <body>
 	Hi.
