This commit updates common.lib which was missed in the last check-in. It also has a handful of fixes, though many more are to come in the next day or so. Also moved the guacamole installed into the main an-cdb installer.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/common.html
+++ b/html/skins/alteeve/common.html
@@ -54,7 +54,7 @@
 			#!string!row_0032!#
 		</td>
 		<td>
-			#!string!message!#
+			#!replace!message!#
 		</td>
 	</tr>
 </table>
@@ -66,9 +66,9 @@
 <table>
 	<tr>
 		<td>
-			<b>Please be patient.</b><br />
-			Gathering information from #!replace!anvil!#.<br />
-			This could take a minute to complete.
+			<b>#!string!title_0113!#</b><br />
+			#!string!message_0272!#<br />
+			#!string!message_0273!#<br />
 		</td>
 		<td>
 			<img src="#!conf!url::skins!#/#!conf!sys::skin!#/images/gather_info.gif" border="0">
