--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -3,7 +3,7 @@
 <!-- start update-server-config-header -->
 <table>
 	<tr>
-		<td colspan="2">
+		<td colspan="2" class="highlight_ready_bold">
 			<b>#!replace!title!#</b>
 		</td>
 	</tr>
@@ -17,7 +17,7 @@
 <!-- end update-server-config-header -->
 
 <!-- start update-server-error-message -->
-				#!replace!title!##<br />
+			#!replace!title!#<br />
 		</td>
 	</tr>
 	<tr>
@@ -642,7 +642,7 @@
 <!-- start provision-server-header -->
 <table>
 	<tr>
-		<td colspan="2">
+		<td colspan="2" class="highlight_ready_bold">
 			<b>#!replace!title!#</b>
 		</td>
 	</tr>
@@ -757,8 +757,8 @@
 <table>
 	<form method="post">
 	<tr>
-		<td colspan="3">
-			<b>#!replace!title!#</b>
+		<td colspan="3" class="highlight_ready_bold">
+			#!replace!title!#
 		</td>
 	</tr>
 	<tr>
@@ -882,8 +882,8 @@
 <!-- start confirm-withdrawl -->
 <table>
 	<tr>
-		<td colspan="2">
-			<span class="highlight_ready">#!replace!title!#</span>
+		<td colspan="2" class="highlight_ready_bold">
+			#!replace!title!#
 		</td>
 	</tr>
 	<tr>
@@ -892,7 +892,7 @@
 		</td>
 		<td>
 			<br />
-			#!string!message!#<br />
+			#!replace!message!#<br />
 			#!string!message_0146!#<br />
 			<br />
 		</td>
@@ -909,13 +909,13 @@
 <!-- start confirm-join-anvil -->
 <table>
 	<tr>
-		<td colspan="2">
-			<span class="highlight_ready">#!replace!title!#</span>
+		<td colspan="2" class="highlight_ready_bold">
+			#!replace!title!#
 		</td>
 	</tr>
 	<tr>
 		<td>
-			<span class="highlight_good"><b>#!replace!row_0032!#</b></span>
+			<span class="highlight_good"><b>#!string!row_0032!#</b></span>
 		</td>
 		<td>
 			<br />
@@ -937,13 +937,13 @@
 <!-- start confirm-dual-join-anvil -->
 <table>
 	<tr>
-		<td colspan="2">
-			<span class="highlight_ready">#!replace!title!#</span>
+		<td colspan="2" class="highlight_ready_bold">
+			#!replace!title!#
 		</td>
 	</tr>
 	<tr>
 		<td>
-			<span class="highlight_good"><b>#!replace!row_0032!#</b></span>
+			<span class="highlight_good"><b>#!string!row_0032!#</b></span>
 		</td>
 		<td>
 			<br />
@@ -964,8 +964,8 @@
 <!-- start confirm-fence-node -->
 <table>
 	<tr>
-		<td colspan="2">
-			<span class="highlight_ready">#!replace!title!#</span>
+		<td colspan="2" class="highlight_ready_bold">
+			#!replace!title!#
 		</td>
 	</tr>
 	<tr>
@@ -981,7 +981,7 @@
 	</tr>
 	<tr>
 		<td>
-			<span class="highlight_warning"><b>#!replace!row_0032!#</b></span>
+			<span class="highlight_warning"><b>#!string!row_0032!#</b></span>
 		</td>
 		<td>
 			<br />
@@ -1013,13 +1013,13 @@
 <!-- start confirm-poweroff-node -->
 <table>
 	<tr>
-		<td colspan="2">
-			<span class="highlight_ready">#!replace!title!#</span>
+		<td colspan="2" class="highlight_ready_bold">
+			#!replace!title!#
 		</td>
 	</tr>
 	<tr>
 		<td>
-			<span class="highlight_good"><b>#!replace!row_0032!#</b></span>
+			<span class="highlight_good"><b>#!string!row_0032!#</b></span>
 		</td>
 		<td>
 			<br />
@@ -1030,7 +1030,7 @@
 	</tr>
 	<tr>
 		<td>
-			<span class="highlight_warning"><b>#!replace!row_0044!#</b></span>
+			<span class="highlight_warning"><b>#!string!row_0044!#</b></span>
 		</td>
 		<td>
 			<br />
@@ -1051,18 +1051,18 @@
 <!-- start confirm-poweron-node -->
 <table>
 	<tr>
-		<td colspan="2">
-			<span class="highlight_ready">#!replace!title!#</b>!</span>
+		<td colspan="2" class="highlight_ready_bold">
+			#!replace!title!#
 		</td>
 	</tr>
 	<tr>
 		<td>
-			<span class="highlight_good"><b>#!replace!row_0032!#</b></span>
+			<span class="highlight_good"><b>#!string!row_0032!#</b></span>
 		</td>
 		<td>
 			<br />
 			#!replace!message!#<br />
-			#!replace!message_0148!#<br />
+			#!string!message_0148!#<br />
 			<br />
 		</td>
 	</tr>
@@ -1079,12 +1079,12 @@
 <table>
 	<tr>
 		<td colspan="2">
-			<span class="highlight_ready">#!string!title_0041!#</span>
+			<span class="highlight_ready"><b>#!string!title_0041!#</b></span>
 		</td>
 	</tr>
 	<tr>
 		<td>
-			<span class="highlight_good"><b>#!replace!row_0032!#</b></span>
+			<span class="highlight_good"><b>#!string!row_0032!#</b></span>
 		</td>
 		<td>
 			<br />
@@ -1105,13 +1105,13 @@
 <!-- start confirm-start-server -->
 <table>
 	<tr>
-		<td colspan="2">
-			<span class="highlight_ready">#!replace!title!#</span>
+		<td colspan="2" class="highlight_ready_bold">
+			#!replace!title!#
 		</td>
 	</tr>
 	<tr>
 		<td>
-			<span class="highlight_good"><b>#!replace!row_0032!#/b></span>
+			<span class="highlight_good"><b>#!string!row_0032!#/b></span>
 		</td>
 		<td>
 			<br />
@@ -1132,8 +1132,8 @@
 <!-- start confirm-stop-server -->
 <table>
 	<tr>
-		<td colspan="2">
-			<span class="highlight_ready">#!replace!title!#</span>
+		<td colspan="2" class="highlight_ready_bold">
+			#!replace!title!#
 		</td>
 	</tr>
 	<tr>
@@ -1149,7 +1149,7 @@
 	</tr>
 	<tr>
 		<td>
-			<span class="highlight_ready"><b>#!replace!row_0032!#</b></span>
+			<span class="highlight_ready"><b>#!string!row_0032!#</b></span>
 		</td>
 		<td>
 			<br />
@@ -1179,8 +1179,8 @@
 <!-- start confirm-force-off-server -->
 <table>
 	<tr>
-		<td colspan="2">
-			<span class="highlight_ready">#!replace!title!#</span>
+		<td colspan="2" class="highlight_ready_bold">
+			#!replace!title!#
 		</td>
 	</tr>
 	<tr>
@@ -1196,7 +1196,7 @@
 	</tr>
 	<tr>
 		<td>
-			<span class="highlight_warning"><b>#!replace!row_0032!#</b></span>
+			<span class="highlight_warning"><b>#!string!row_0032!#</b></span>
 		</td>
 		<td>
 			<br />
@@ -1228,8 +1228,8 @@
 <!-- start confirm-delete-server -->
 <table>
 	<tr>
-		<td colspan="2">
-			<span class="highlight_ready">#!replace!title!#</span>
+		<td colspan="2" class="highlight_ready_bold">
+			#!replace!title!#
 		</td>
 	</tr>
 	<tr>
@@ -1245,7 +1245,7 @@
 	</tr>
 	<tr>
 		<td>
-			<span class="highlight_warning"><b>#!replace!row_0044!#</b></span>
+			<span class="highlight_warning"><b>#!string!row_0044!#</b></span>
 		</td>
 		<td>
 			<br />
@@ -1259,7 +1259,7 @@
 	</tr>
 	<tr>
 		<td>
-			<span class="highlight_good"><b>#!replace!row_0032!#</b></span>
+			<span class="highlight_good"><b>#!string!row_0032!#</b></span>
 		</td>
 		<td>
 			<br />
@@ -1279,13 +1279,13 @@
 <!-- start confirm-migrate-server -->
 <table>
 	<tr>
-		<td colspan="2">
-			<span class="highlight_ready">#!replace!title!#</span>
+		<td colspan="2" class="highlight_ready_bold">
+			#!replace!title!#
 		</td>
 	</tr>
 	<tr>
 		<td>
-			<span class="highlight_good"><b>#!replace!row_0032!#</b></span>
+			<span class="highlight_good"><b>#!string!row_0032!#</b></span>
 		</td>
 		<td>
 			<br />
@@ -1305,8 +1305,8 @@
 <!-- start start-server-header -->
 <table>
 	<tr>
-		<td colspan="2">
-			<span class="highlight_ready"><b>#!replace!title!#</b></span>
+		<td colspan="2" class="highlight_ready_bold">
+			#!replace!title!#
 		</td>
 	</tr>
 	<tr>
@@ -1323,7 +1323,7 @@
 <!-- start start-server-already-running -->
 				<tr>
 					<td style="border: 1px solid white;" class="highlight_note">
-						#!replace!row_0032!#
+						#!string!row_0032!#
 					</td>
 					<td style="border: 1px solid white;" class="fixed_width" align="left">
 						#!string!message_0180!#<br />
@@ -1423,8 +1423,8 @@
 <!-- start start-server-node-not-ready -->
 <table>
 	<tr>
-		<td>
-			<span class="highlight_bad"><b>#!replace!title!#</b></span>
+		<td class="highlight_bad_bold">
+			#!replace!title!#
 		</td>
 	</tr>
 	<tr>
@@ -1448,8 +1448,8 @@
 <!-- start migrate-server-header -->
 <table>
 	<tr>
-		<td>
-			<span class="highlight_ready"><b>#!replace!title!#</b></span>
+		<td class="highlight_ready_bold">
+			#!replace!title!#
 		</td>
 	</tr>
 	<tr>
@@ -1481,7 +1481,7 @@
 <table>
 	<tr>
 		<td>
-			<span class="highlight_bad"><b>#!replace!title!#</b></span>
+			#!replace!title!#
 		</td>
 	</tr>
 	<tr>
@@ -1506,7 +1506,7 @@
 <table>
 	<tr>
 		<td>
-			<span class="highlight_ready"><b>#!replace!title!#</b></span><br />
+			<span class="highlight_ready_bold">#!replace!title!#</span><br />
 			#!string!message_0188!#
 		</td>
 	</tr>
@@ -1539,7 +1539,7 @@
 <table>
 	<tr>
 		<td>
-			<span class="highlight_good"><b>#!replace!title!#</b></span><br />
+			<span class="highlight_good_bold">#!replace!title!#</span><br />
 			#!string!message_0188!#<br />
 			#!string!message_0189!#<br />
 		</td>
@@ -1572,8 +1572,8 @@
 <!-- start join-anvil-aborted -->
 <table>
 	<tr>
-		<td>
-			<span class="highlight_bad"><b>#!replace!title!#</b></span>
+		<td class="highlight_bad_bold">
+			#!replace!title!#
 		</td>
 	</tr>
 	<tr>
@@ -1597,7 +1597,7 @@
 <table>
 	<tr>
 		<td>
-			<span class="highlight_good"><b>#!replace!title!#</b></span><br />
+			<span class="highlight_good_bold">#!replace!title!#</span><br />
 			#!string!message_0188!#<br />
 			#!string!message_0189!#<br />
 		</td>
@@ -1605,7 +1605,7 @@
 	<tr>
 		<td>
 			#!string!message_0179!#<br />
-			<span class="highlight_ready_bold">#!replace!row_0032!#</span>: #!string!message_0191!#
+			<span class="highlight_ready_bold">#!string!row_0032!#</span>: #!string!message_0191!#
 		</td>
 	</tr>
 	<tr>
@@ -1645,8 +1645,8 @@
 <!-- start dual-join-anvil-aborted-header -->
 <table>
 	<tr>
-		<td>
-			<span class="highlight_bad"><b>#!replace!title!#</b></span>
+		<td class="highlight_bad_bold">
+			#!replace!title!#
 		</td>
 	</tr>
 	<tr>
@@ -1670,8 +1670,8 @@
 <!-- start force-off-server-header -->
 <table>
 	<tr>
-		<td>
-			<span class="highlight_bad"><b>#!replace!title!#</b></span><br />
+		<td class="highlight_bad_bold">
+			#!replace!title!#<br />
 			#!string!message_0188!#
 		</td>
 	</tr>
@@ -1708,8 +1708,8 @@
 <!-- start delete-server-header -->
 <table>
 	<tr>
-		<td class="highlight_ready">
-			<b>#!replace!title!#</b></span><br />
+		<td class="highlight_ready_bold">
+			#!replace!title!#
 		</td>
 	</tr>
 <!-- end delete-server-header -->
@@ -1816,8 +1816,8 @@
 <!-- start poweroff-node-header -->
 <table>
 	<tr>
-		<td>
-			<span class="highlight_ready"><b>#!replace!title!#</b></span>
+		<td class="highlight_ready_bold">
+			#!replace!title!#
 		</td>
 	</tr>
 	<tr>
@@ -1848,11 +1848,10 @@
 <!-- end poweroff-node-footer -->
 
 <!-- start poweroff-node-aborted -->
-		print "
 <table>
 	<tr>
-		<td>
-			<span class="highlight_bad"><b>#!replace!title!#</b></span>
+		<td class="highlight_bad_bold">
+			#!replace!title!#
 		</td>
 	</tr>
 	<tr>
@@ -1877,8 +1876,8 @@
 <!-- start dual-boot-header -->
 <table>
 	<tr>
-		<td>
-			<b>#!string!title_0063!#</b>
+		<td class="highlight_ready_bold">
+			#!string!title_0063!#
 		</td>
 	</tr>
 	<tr>
@@ -1910,8 +1909,8 @@
 <!-- start dual-boot-aborted-header -->
 <table>
 	<tr>
-		<td>
-			<span class="highlight_bad"><b>#!replace!title!#</b></span>
+		<td class="highlight_bad_bold">
+			#!replace!title!#
 		</td>
 	</tr>
 <!-- end dual-boot-aborted-header -->
@@ -1939,8 +1938,8 @@
 <!-- start poweron-node-header -->
 <table>
 	<tr>
-		<td>
-			<span class="highlight_ready"><b>#!replace!title!#</b></span>
+		<td class="highlight_ready_bold">
+			#!replace!title!#
 		</td>
 	</tr>
 	<tr>
@@ -1968,8 +1967,8 @@
 <br />
 <table>
 	<tr>
-		<td>
-			<span class="highlight_bad"><b>#!replace!title!#</b></span>
+		<td class="highlight_bad_bold">
+			#!replace!title!#
 		</td>
 	</tr>
 	<tr>
@@ -1991,8 +1990,8 @@
 <!-- start poweron-node-aborted -->
 <table>
 	<tr>
-		<td>
-			<span class="highlight_bad"><b>#!replace!title!#</b></span>
+		<td class="highlight_bad_bold">
+			#!replace!title!#
 		</td>
 	</tr>
 	<tr>
@@ -2017,8 +2016,8 @@
 <!-- start fence-node-header -->
 <table>
 	<tr>
-		<td>
-			<span class="highlight_warning"><b>#!replace!title!#</b></span>
+		<td class="highlight_warning_bold">
+			#!replace!title!#
 		</td>
 	</tr>
 	<tr>
@@ -2062,8 +2061,8 @@
 
 <!-- start fence-node-aborted-header -->
 	<tr>
-		<td>
-			<span class="highlight_bad"><b>#!replace!title!#</b></span>
+		<td class="highlight_bad_bold">
+			#!replace!title!#
 		</td>
 	</tr>
 <!-- end fence-node-aborted-header -->
@@ -2091,8 +2090,8 @@
 <!-- start withdraw-node-header -->
 <table>
 	<tr>
-		<td>
-			<span class="highlight_ready"><b>#!replace!title!#</b></span>
+		<td class="highlight_ready_bold">
+			#!replace!title!#
 		</td>
 	</tr>
 	<tr>
@@ -2514,7 +2513,7 @@
 			#!string!message_0270!#
 		</td>
 		<td>
-			<span class="fixed_width">#!replace!say_pv_name</span>
+			<span class="fixed_width">#!replace!say_pv_name!#</span>
 		</td>
 		<td>
 			#!replace!say_vg_size!#
@@ -2697,7 +2696,7 @@
 	</tr>
 <!-- end display-server-state-and-control-header -->
 
-<!-- start display-server-details -->
+<!-- start display-server-details-entry -->
 	<tr>
 		<td>
 			#!replace!vm_link!#
@@ -2727,10 +2726,10 @@
 			&nbsp;
 		</td>
 		<td>
-			#!replace!say_delete_button!#
+			#!replace!delete_button!#
 		</td>
 	</tr>
-<!-- end display-server-details -->
+<!-- end display-server-details-entry -->
 
 <!-- start display-server-state-and-control-footer -->
 </table>
@@ -2952,7 +2951,7 @@
 <!-- start display-node-details-entry -->
 	<tr>
 		<td>
-			<span class="fixed_width">#!replace!host_name!#</span> &nbsp;
+			&nbsp; <span class="fixed_width">#!replace!host_name!#</span> &nbsp;
 		</td>
 		<td>
 			#!replace!cman!#
