First round of fixes. Tested cold-booting, joining, withdrawing and powering off nodes. Tested booting servers.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/common.html
+++ b/html/skins/alteeve/common.html
@@ -98,13 +98,13 @@
 <!-- start restart-guacamole-header -->
 <table>
 	<tr>
-		<td class="highlight_ready" colspan="2">
+		<td class="highlight_ready_bold" colspan="2">
 			#!string!title_0017!#
 		</td>
 	</tr>
 	<tr>
 		<td>
-			<span class="highlight_warning_bold">#!string!row_0032!#</span>
+			<span class="highlight_ready">#!string!row_0127!#</span>
 		</td>
 		<td>
 			<br />
