Fixed (initially, needs to be cleaned up) a problem with uploading ISOs generated on striker to the Anvil! using the media library. This needs 'expect' which has been added to the an-cdb installer.
Fixed several more smaller bugs as well.

Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/common.html
+++ b/html/skins/alteeve/common.html
@@ -50,8 +50,13 @@
 <!-- start error-table -->
 <table>
 	<tr>
+		<td colspan="2" class="highlight_ready_bold">
+			#!string!title_0114!#
+		</td>
+	</tr>
+	<tr>
 		<td class="highlight_warning_bold">
-			#!string!row_0032!#
+			#!string!row_0096!#
 		</td>
 		<td>
 			#!replace!message!#
