--- a/html/skins/alteeve/lsi-storage.html
+++ b/html/skins/alteeve/lsi-storage.html
@@ -358,7 +358,7 @@
 						#!string!row_0057!#:
 					</td>
 					<td class="fixed_width_left">
-						#!replace!state!#
+						#!replace!disk_state!#
 						<span class="#!replace!disk_state_class!#">#!replace!disk_state!#</span>
 						#!replace!disk_action!#
 					</td>
