--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -57,16 +57,19 @@
 			<br />
 			#!string!message_0064!#<br />
 			<br />
+<!-- end server-poweroff-required-message -->
+
+<!-- start update-server-config-footer -->
 		</td>
 	</tr>
 	<tr>
 		<td colspan="2">
-			<div class="align_right"><a href="#!replace!url!#" class="button">#!button!button_0016!#</a></div>
+			<div class="align_right"><a href="#!replace!url!#" class="button">#!string!button_0016!#</a></div>
 		</td>
 	</tr>
 </table>
 <br />
-<!-- end server-poweroff-required-message -->
+<!-- end update-server-config-footer -->
 
 <!-- start no-change-message -->
 			#!string!title_0029!#<br />
@@ -529,7 +532,7 @@
 		</td>
 		<td>
 			<br />
-			#!string!message_0101#!<br />
+			#!string!message_0101!#<br />
 <!-- end add-server-to-anvil-undefine-server -->
 
 <!-- start add-server-to-anvil-failed-to-undefine-server -->
@@ -834,7 +837,7 @@
 			#!string!row_0086!#:
 		</td>
 		<td>
-			(<span class="subtle_text">#!replace!say_max_ram #!string!message_0141!#</span>) <input type="input" name="ram" value="#!replace!ram!#" style="width: 100px;"> #!replace!select_ram_suffix!#
+			(<span class="subtle_text">#!replace!say_max_ram!# #!string!message_0141!#</span>) <input type="input" name="ram" value="#!replace!ram!#" style="width: 100px;"> #!replace!select_ram_suffix!#
 		</td>
 		<td class="subtle_text">
 			#!string!explain_0030!#<br />
@@ -857,7 +860,7 @@
 			#!string!row_0119!#:
 		</td>
 		<td>
-			#!replace!say_selects!#
+			#!replace!selects!#
 		</td>
 		<td class="subtle_text">
 			#!string!explain_0033!#<br />
