Fixed a bug where uploading a generated ISO in the media library would fail to rsync to the Anvil!'s shared storage when passwordless SSH was not enabled. This fix requires that 'expect' be installed. If 'expect' is not installed, direct rsync is used and passwordless ssh is required.
Added a new function to LSI storage management to enable the clearing of foreign configs from drives in the array.

Fixed a few other smaller text/display issues. Added what will become the media library template file.

Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/lsi-storage.html
+++ b/html/skins/alteeve/lsi-storage.html
@@ -335,7 +335,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td rowspan="16" width="128px" style="vertical-align: top;">
+					<td rowspan="17" width="128px" style="vertical-align: top;">
 						<a href="#!replace!id_led_url!#"><img src="#!replace!disk_icon!#" border="0"></a>
 					</td>
 					<td class="highlight_detail_left">
@@ -358,7 +358,6 @@
 						#!string!row_0057!#:
 					</td>
 					<td class="fixed_width_left">
-						#!replace!disk_state!#
 						<span class="#!replace!disk_state_class!#">#!replace!disk_state!#</span>
 						#!replace!disk_action!#
 					</td>
@@ -385,6 +384,14 @@
 					</td>
 					<td class="fixed_width_left">
 						#!replace!device_type!#
+					</td>
+				</tr>
+				<tr>
+					<td class="highlight_detail_left">
+						#!string!row_0128!#:
+					</td>
+					<td class="#!replace!foreign_state_class!#">
+						#!replace!foreign_state!#
 					</td>
 				</tr>
 				<tr>
