Fixed a bug where to ensure that searching for a server would properly check both nodes.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -717,7 +717,7 @@
 	</tr>
 	<tr>
 		<td colspan="2">
-			<div class="align_right">#!string!message_0126!#</div>
+			<div class="align_right" style="white-space: nowrap;">#!string!message_0126!#</div>
 		</td>
 	</tr>
 </table>
