Fixed a problem with removing a foreign config from an LSI drive. Fixed some more variable/replacement mistakes in the templates and strings files.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/lsi-storage.html
+++ b/html/skins/alteeve/lsi-storage.html
@@ -262,7 +262,7 @@
 						#!string!row_0059!#:
 					</td>
 					<td class="fixed_width_left">
-						<a href="#!variable!raid_url!#" target="_new">#!replace!primary_raid_level!#</a>
+						<a href="#!replace!raid_url!#" target="_new">#!replace!primary_raid_level!#</a>
 					</td>
 				</tr>
 				<tr>
