--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -168,7 +168,7 @@
 <table>
 	<tr>
 		<td colspan="2">
-			<b>Ejecting <span class="code">#!variable!drive!#</span>...</b>
+			<b>Ejecting <span class="code">#!replace!drive!#</span>...</b>
 		</td>
 	</tr>
 	<tr>
