--- a/html/skins/alteeve/main-page.html
+++ b/html/skins/alteeve/main-page.html
@@ -25,7 +25,7 @@
 <table>
 	<tr>
 		<td colspan="3">
-			Unable to connect to the <span class="highlight_detail">#!replace!anvil!#</span> cluster!
+			#!string!title_0116!#
 		</td>
 	</tr>
 <!-- end connection-error-table-header -->
@@ -101,9 +101,3 @@
 
 <!-- start migrate-server-footer -->
 <!-- end migrate-server-footer -->
-
-<!-- start  -->
-<!-- end  -->
-
-<!-- start  -->
-<!-- end  -->
