- Fixed a text substitution error on the header box when inserting media into   a server's optical drive. - Added support for software (md) RAID arrays in AN!CM.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -168,7 +168,7 @@
 <table>
 	<tr>
 		<td colspan="2">
-			<b>Ejecting <span class="code">#!replace!drive!#</span>...</b>
+			<b>#!string!title_0031!#</b>
 		</td>
 	</tr>
 	<tr>
