This release fixes a bug with saving the guacamole TCP port feature introduced in v1.1.3.
This commit also has the start of a new feature for editing the dashboard's hostname, network interfaces and running updates. These features will come slowly over the next week or two.

v1.1.4 - 2014-05-27
- Added the 'gather-system-info' (and associated setuid script).
- Fixed a bug with saving the guacamole port definition.

Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/select-anvil.html
+++ b/html/skins/alteeve/select-anvil.html
@@ -46,6 +46,14 @@
 			#!string!message_0002!#
 		</td>
 	</tr>
+<!--	<tr>
+		<td>
+			<a href="?system=true">#!string!row_0136!#</a>
+		</td>
+		<td colspan="3">
+			#!string!message_0287!#
+		</td>
+	</tr>-->
 	<tr>
 		<td colspan="4">
 			&nbsp;
