Mid-release commit.
Fixes some minor display issues with regard to how servers that are not yet added to cluster management display in Striker.

Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -413,11 +413,18 @@
 <!-- end add-server-to-anvil-no-ricci-password -->
 
 <!-- start add-server-to-anvil-no-failover-domain -->
+<table>
+	<tr>
+		<td colspan="2">
+			<b>#!string!title_0120!#</b>
+		</td>
+	</tr>
 	<tr>
 		<td class="highlight_bad_bold">
 			#!string!state_0008!#
 		</td>
 		<td>
+			<br />
 			#!string!message_0089!#<br />
 			<br />
 			#!string!explain_0022!#<br />
