- Removed the confirmation requirements for several fairly-safe commands, line   powering on nodes, booting servers, etc. - Updated the IPMI scanner code to redirect sensor loss/restore messages to a   now-smarter debug email address.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/common.html
+++ b/html/skins/alteeve/common.html
@@ -143,3 +143,14 @@
 </table>
 <br />
 <!-- end restart-guacamole-footer -->
+
+<!-- start generic-note -->
+	<tr>
+		<td class="highlight_warning_bold">
+			#!string!row_0032!#
+		</td>
+		<td>
+			#!replace!message!#
+		</td>
+	</tr>
+<!-- end generic-note -->
