--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -2220,7 +2220,7 @@
 	<tr>
 		<td>
 			<br />
-			<span class="highlight_bad"><b>#!replace!title_0071!#</b></span>
+			<span class="highlight_bad"><b>#!string!title_0071!#</b></span>
 			<br />
 		</td>
 	</tr>
